--- a/style.css
+++ b/style.css
@@ -235,6 +235,8 @@ header {
 }
 
 .wrapper2 {
+    margin-top: 19%;
+    margin-left: 69%;
     position: absolute;
     width: 300px;
     height: 570px;
@@ -264,6 +266,7 @@ header {
 }
 
 .Cbot-popup {
+    margin-left: 100px;
     position: absolute;
     left: 88%;
     bottom: 2%;
